--- a/css/main.css
+++ b/css/main.css
@@ -7,35 +7,6 @@ i {
     cursor: pointer;
 }
 
-#successProductAlert {
-    display: none;
-}
-
-
-/***********************************************/
-.myTextColor,
-.activeLink {
-    color: #F04E26 !important;
-}
-
-.myText {
-    font-family: 'Luckiest Guy', cursive;
-    text-transform: uppercase;
-}
-
-
-
-.dropdown-item:focus,
-.dropdown-item:hover {
-    color: #fff;
-    text-decoration: none;
-    background-color: #F04E26;
-}
-
-.bg-light {
-    background-color: #f8f9fb;
-}
-
 
 /***********************************/
 #searchItem {
@@ -48,32 +19,74 @@ i {
     right: 0;
 }
 
-/*****************************************/
-#productHeader {
-    /*background-image: url(../images/abstract.png);*/
-    background-repeat: no-repeat;
-    background-position: right center;
-    background-size: 450px 360px;
+.form-style-9{
+	max-width: 450px;
+	background: #FAFAFA;
+	padding: 30px;
+	margin: 50px auto;
+	box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.35);
+	border-radius: 10px;
+	border: 6px solid #305A72;
+}
+.form-style-9 ul{
+	padding:0;
+	margin:0;
+	list-style:none;
+}
+.form-style-9 ul li{
+	display: block;
+	margin-bottom: 10px;
+	min-height: 35px;
+}
+.form-style-9 ul li  .field-style{
+	box-sizing: border-box; 
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box; 
+	padding: 8px;
+	outline: none;
+	border: 1px solid #B0CFE0;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	-o-transition: all 0.30s ease-in-out;
+
+}.form-style-9 ul li  .field-style:focus{
+	box-shadow: 0 0 5px #B0CFE0;
+	border:1px solid #B0CFE0;
+}
+.form-style-9 ul li .field-split{
+	width: 49%;
+}
+.form-style-9 ul li .field-full{
+	width: 100%;
+}
+.form-style-9 ul li input.align-left{
+	float:left;
+}
+.form-style-9 ul li input.align-right{
+	float:right;
+}
+.form-style-9 ul li textarea{
+	width: 100%;
+	height: 100px;
+}
+.form-style-9 ul li input[type="button"], 
+.form-style-9 ul li input[type="submit"] {
+	-moz-box-shadow: inset 0px 1px 0px 0px #3985B1;
+	-webkit-box-shadow: inset 0px 1px 0px 0px #3985B1;
+	box-shadow: inset 0px 1px 0px 0px #3985B1;
+	background-color: #216288;
+	border: 1px solid #17445E;
+	display: inline-block;
+	cursor: pointer;
+	color: #FFFFFF;
+	padding: 8px 18px;
+	text-decoration: none;
+	font: 12px Arial, Helvetica, sans-serif;
+}
+.form-style-9 ul li input[type="button"]:hover, 
+.form-style-9 ul li input[type="submit"]:hover {
+	background: linear-gradient(to bottom, #2D77A2 5%, #337DA8 100%);
+	background-color: #28739E;
 }
 
-/****************contact page***********/
-.myContactAlert,
-.myContactdangerAlert {
-    display: none;
-}
-/**************RESPONSIVE***********/
-@media only screen and (max-width:767px) {
-    .caption a {
-        color: #333;
-        padding: 15px;
-        text-decoration: none;
-        transition: all .4s;
-    }
-
-    .caption a:hover {
-
-        background-color: rgba(255, 255, 255, .5);
-        border-radius: 15px;
-        color: #F04E26;
-    }
-}
