--- a/css/main.css
+++ b/css/main.css
@@ -114,25 +114,20 @@ body {
     color: #000;
     display: inline;
     font-size: 50px;
-    font-weight: 500;
+    font-weight: 400;
     text-transform: uppercase;
 }
 
 .sabor { 
     color: #fff;
     margin: 7px 0;
-    font-size: 50px;
-    font-weight: 600;
+    font-size: 40px;
+    font-weight: 300;
     text-shadow: 2px 2px 1px rgba(0,0,0,0.7);
     font-family: 'Dancing Script', cursive;
     margin-top: 0;
 }
 
-.linea-division {
-    width: 80%;
-    height: 2px;
-    background-color: #36221c;
-}
 
 /* ------------------------- */
 /* Estilos de Materialize */
@@ -149,13 +144,13 @@ body {
     user-select: none;
     width: 500px;
     height: 500px;
+    background-color: #dcdada69;
 }
 
 .carousel .carousel-item img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
     top: 0;
     left: 0;
     z-index: -1;
